deploy/k8s/apps/metamodel-orchestration/middleware-forward-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: airflow-forward-prefix
  namespace: myapp
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Prefix: /airflow
