deploy/k8s/apps/metamodel-orchestration/middleware-strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: airflow-strip-prefix
  namespace: myapp
spec:
  stripPrefix:
    prefixes:
      - /airflow
