deploy/k8s/apps/metamodel-orchestration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metamodel-orchestration-ingress
  namespace: myapp
  labels:
    app: metamodel-orchestration
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - airflow.dev.example.com
      secretName: dev-myapp-io-tls
  rules:
    - host: "airflow.dev.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metamodel-orchestration
                port:
                  number: 8080
